fix: element spacings

--- a/resources/scss/pages/game-page.scss
+++ b/resources/scss/pages/game-page.scss
@@ -66,7 +66,7 @@
 .game-page__main {
   display: flex;
   height: 100%;
-  max-height: 90vh;
+  max-height: calc(100% - 45px - space(3));
 }
 
 .game-page__details {
